# goofy-ahh-alloc

./: Cargo.toml  README.md
src/: lib.rs
tests/: alloc.rs
