[package]
edition = "2021"
name = "mdbxalloc"
readme = "README.md"
repository = "https://github.com/kariy/mdbxalloc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.libmdbx]
git = "https://github.com/paradigmxyz/reth.git"
package = "reth-libmdbx"
rev = "b34b0d3"
