[package]
edition = "2021"
name = "goofy-ahh-alloc"
readme = "README.md"
repository = "https://github.com/kariy/goofy-ahh-alloc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
lazy_static = "1.4.0"
memmap2 = "0.9.3"
stupidalloc = "0.2.1"


[dev-dependencies]
criterion = "0.5.1"
